tests/src/Loader/classloader/generics/Instantiation/Negative/param04.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param04_param04_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param04_param04_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param04\\param04.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
